Update pricing: →, → and add Stripe payment links

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             <div class="plans">
                 <div class="plan">
                     <div class="plan-name">Starter</div>
-                    <div class="plan-price">$39<span>/month</span></div>
+                    <div class="plan-price">$15<span>/month</span></div>
                     <ul class="plan-features">
                         <li>Up to 10 podcasts</li>
                         <li>Daily email digests</li>
@@ -252,12 +252,12 @@
                         <li>Strategic takeaways</li>
                         <li>Email support</li>
                     </ul>
-                    <a href="STRIPE_STARTER_LINK" class="btn">Start Free Trial</a>
+                    <a href="https://checkout.stripe.com/c/pay/cs_test_b119smDvLcTnSMl6WhE8V6mJMZDsaC13sagEmwwlhc9humckT9yP3Otxck#fidnandhYHdWcXxpYCc%2FJ2FgY2RwaXEnKSdkdWxOYHwnPyd1blpxYHZxWjA0UTV3bUdDPXRwUGlHYEJsU102N25tajJVTVNPMUwyPVYwMj1DV1I8XzB1YXdtalJkPHJAf29mbW1cS2NSUmBMU2M3PUJ0ZnRdRHZxMWo1VEJyTU1pQF19NTV9cmBkVVExZicpJ2N3amhWYHdzYHcnP3F3cGApJ2dkZm5id2pwa2FGamlqdyc%2FJyZjY2NjY2MnKSdpZHxqcHFRfHVgJz8naHBpcWxabHFgaCcpJ2BrZGdpYFVpZGZgbWppYWB3dic%2FcXdwYHgl" class="btn">Start Free Trial</a>
                 </div>
                 
                 <div class="plan">
                     <div class="plan-name">Pro</div>
-                    <div class="plan-price">$79<span>/month</span></div>
+                    <div class="plan-price">$25<span>/month</span></div>
                     <ul class="plan-features">
                         <li>Up to 25 podcasts</li>
                         <li>Daily email digests</li>
@@ -266,7 +266,7 @@
                         <li>Priority support</li>
                         <li>Custom delivery times</li>
                     </ul>
-                    <a href="STRIPE_PRO_LINK" class="btn btn-secondary">Start Free Trial</a>
+                    <a href="https://checkout.stripe.com/c/pay/cs_test_b1FDHNLjG4nHsxc0pWRGk60RCt4LH1S9BpBhvLMe5c4uLVprqSdfwOUw58#fidnandhYHdWcXxpYCc%2FJ2FgY2RwaXEnKSdkdWxOYHwnPyd1blpxYHZxWjA0UTV3bUdDPXRwUGlHYEJsU102N25tajJVTVNPMUwyPVYwMj1DV1I8XzB1YXdtalJkPHJAf29mbW1cS2NSUmBMU2M3PUJ0ZnRdRHZxMWo1VEJyTU1pQF19NTV9cmBkVVExZicpJ2N3amhWYHdzYHcnP3F3cGApJ2dkZm5id2pwa2FGamlqdyc%2FJyZjY2NjY2MnKSdpZHxqcHFRfHVgJz8naHBpcWxabHFgaCcpJ2BrZGdpYFVpZGZgbWppYWB3dic%2FcXdwYHgl" class="btn btn-secondary">Start Free Trial</a>
                 </div>
             </div>
         </div>
