--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
         <footer>
             <p>Questions? Contact us at <a href="mailto:SUPPORT_EMAIL">SUPPORT_EMAIL</a></p>
             <p style="margin-top: 20px;">
-                <a href="update.html">Manage Subscription</a> | 
+                <a href="manage.html">Manage Subscription</a> | 
                 <a href="INTAKE_FORM_LINK">Add Podcasts</a>
             </p>
         </footer>
