--- a/success.html
+++ b/success.html
@@ -130,12 +130,12 @@
             </ol>
         </div>
         
-        <a href="INTAKE_FORM_LINK" class="btn">Add Podcasts Now</a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfgIDxVk28bkODHkz-lOCj-C8J-OPNdH-XhV0xmMbzMZopgtA/viewform?usp=sf_link" class="btn" target="_blank">Add Podcasts Now</a>
         <a href="/" class="btn btn-secondary">Back to Home</a>
         
         <div class="support">
             <p>Need help? Contact us at <a href="mailto:SUPPORT_EMAIL">SUPPORT_EMAIL</a></p>
-            <p style="margin-top: 10px;">You can also <a href="update.html">manage your subscription</a> anytime.</p>
+            <p style="margin-top: 10px;">You can also <a href="manage.html">manage your subscription</a> anytime.</p>
         </div>
     </div>
 </body>
