Add Manage Subscription form URL to manage.html

--- a/manage.html
+++ b/manage.html
@@ -154,7 +154,7 @@
             </ul>
         </div>
         
-        <a href="MANAGE_FORM_LINK" class="btn" target="_blank">Request Management Link</a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLScO0-SH7NEcznvcZPqOIxeG7M2Myw4WGq_FpnHEq5TsM9OH3Q/viewform?usp=sf_link" class="btn" target="_blank">Request Management Link</a>
         
         <div class="note">
             🔒 For your security, we'll send a unique link to your email that expires in 30 minutes.
