--- a/subscriptions.html
+++ b/subscriptions.html
@@ -3,20 +3,71 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>SignalBrief — Redirecting…</title>
+<title>SignalBrief — Continue</title>
+<meta name="robots" content="noindex" />
+<style>
+body {
+font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
+padding: 32px;
+max-width: 720px;
+margin: 0 auto;
+}
+.card {
+border: 1px solid #eee;
+border-radius: 14px;
+padding: 22px;
+}
+.btn {
+display: inline-block;
+margin-top: 14px;
+padding: 12px 18px;
+border-radius: 10px;
+background: #0071e3;
+color: #fff;
+text-decoration: none;
+font-weight: 700;
+}
+.muted {
+color: #666;
+font-size: 13px;
+margin-top: 12px;
+line-height: 1.4;
+}
+code {
+background: #f6f6f6;
+padding: 2px 6px;
+border-radius: 6px;
+}
+</style>
 </head>
-<body style="font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; padding: 24px;">
-<p>Redirecting you to your subscription manager…</p>
+<body>
+<div class="card" id="content">
+<h2 style="margin:0 0 8px 0;">Continue to manage subscriptions</h2>
+<p style="margin:0;">Click the button below to open your subscription manager.</p>
+</div>
 <script>
 (function () {
 const params = new URLSearchParams(window.location.search);
 const token = params.get("token");
-const WEB_APP_URL = "https://script.google.com/macros/s/AKfycby4vCCnaHQkYoQ7NH3kMlecTnPAzn3O894WWMORny1GWXT2ABqLB_y78LqjTBW1OL3zoQ/exec";
+const APPS_SCRIPT_URL = "https://script.google.com/macros/s/AKfycby4vCCnaHQkYoQ7NH3kMlecTnPAzn3O894WWMORny1GWXT2ABqLB_y78LqjTBW1OL3zoQ/exec";
+const content = document.getElementById("content");
 if (!token) {
-document.body.innerHTML = "<p>Missing token. Please request a new link.</p>";
+content.innerHTML = `
+<h2 style="margin:0 0 8px 0;">Missing token</h2>
+<p style="margin:0;">Please request a new link from the Manage Subscriptions page.</p>
+`;
 return;
 }
-window.location.replace(WEB_APP_URL + "?token=" + encodeURIComponent(token));
+const dest = APPS_SCRIPT_URL + "?token=" + encodeURIComponent(token);
+content.innerHTML = `
+<h2 style="margin:0 0 8px 0;">Continue to manage subscriptions</h2>
+<p style="margin:0;">Click the button below. It will open in a new tab.</p>
+<a class="btn" href="${dest}" target="_blank" rel="noopener noreferrer">Open Subscription Manager</a>
+<p class="muted">
+If it doesn't open, copy/paste this link into your browser:<br>
+<code>${dest}</code>
+</p>
+`;
 })();
 </script>
 </body>
